mypkg/objects/Car_Part__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The Chassis.</fullName>
                </value>
                <value>
                    <fullName>The Engine.</fullName>
                </value>
                <value>
                    <fullName>The Transmission System.</fullName>
                </value>
                <value>
                    <fullName>The Body.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Part_Available__c</fullName>
        <label>Number Of Part Available</label>
        <summaryForeignKey>Car_Parts__c.Select_Car_Serial_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Select_Manufacturer__c</fullName>
        <label>Select Manufacturer</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>Ferrari</fullName>
                </value>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Hyundai</fullName>
                </value>
                <value>
                    <fullName>Kia</fullName>
                </value>
                <value>
                    <fullName>Maruti</fullName>
                </value>
                <value>
                    <fullName>Renault</fullName>
                </value>
                <value>
                    <fullName>Tata</fullName>
                </value>
                <value>
                    <fullName>Toyota</fullName>
                </value>
                <value>
                    <fullName>Volve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_Model__c</fullName>
        <label>Select Model</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Select_Manufacturer__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>A-STAR</fullName>
                </value>
                <value>
                    <fullName>ALTO</fullName>
                </value>
                <value>
                    <fullName>VIVA</fullName>
                </value>
                <value>
                    <fullName>CRETA</fullName>
                </value>
                <value>
                    <fullName>EON</fullName>
                </value>
                <value>
                    <fullName>GETZ</fullName>
                </value>
                <value>
                    <fullName>BRIO</fullName>
                </value>
                <value>
                    <fullName>CITY</fullName>
                </value>
                <value>
                    <fullName>CIVIC</fullName>
                </value>
                <value>
                    <fullName>CR-V</fullName>
                </value>
                <value>
                    <fullName>CAMRY</fullName>
                </value>
                <value>
                    <fullName>COROLLA</fullName>
                </value>
                <value>
                    <fullName>GLANZA</fullName>
                </value>
                <value>
                    <fullName>YARIS</fullName>
                </value>
                <value>
                    <fullName>207</fullName>
                </value>
                <value>
                    <fullName>ACE</fullName>
                </value>
                <value>
                    <fullName>ARIA</fullName>
                </value>
                <value>
                    <fullName>BOLT</fullName>
                </value>
                <value>
                    <fullName>DUSTER</fullName>
                </value>
                <value>
                    <fullName>CAPTUR</fullName>
                </value>
                <value>
                    <fullName>KWID</fullName>
                </value>
                <value>
                    <fullName>LOGAN</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>1 SERIES</fullName>
                </value>
                <value>
                    <fullName>3 SERIES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Select_Manufacturer__c</columns>
        <columns>Select_Model__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSN-{0000}</displayFormat>
        <label>Car Serial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>